--- a/templates/speaker_list.html
+++ b/templates/speaker_list.html
@@ -21,9 +21,9 @@
          {% endfor %}
     </div>
 
-    <div class="row">
-      <div class="col-lg-4">
-        <a  href="{{url_for('index')}}" class="col-med-4 btn btn-info btn-block" type="submit">Home  </a>
+    <div class="row mt-4">
+      <div class="col-lg-2 col-med-4 col-sm-12">
+        <a  href="{{url_for('index')}}" class="btn btn-info btn-block" type="submit">Home  </a>
       </div>  
     </div>
    
