--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="navbar-brand" href="{{url_for('index')}}"><h1><i class="fas fa-home"></i> International Orator Hub</h1></a>
-      <a class="btn btn-primary" href="#">Tel: +353 66 856941</a>
+        <button class = "btn btn-primary btn-lg">To reserve a Speaker call +353 66 856941</button>
     </div>
   </nav>
 
@@ -35,12 +35,13 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Review and Rank the Leading Orators of our Day!</h1>
+          <h1 class="mb-5">Review our Leading Orators and Propose your Own!</h1>
         </div>
         
       </div>
     </div>
   </header>
+
 
  <div class="container-fluid">
     {% block content%} {% endblock %}
@@ -51,27 +52,36 @@
   <footer class="footer bg-light">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+        <div class="col-lg-3 h-100 text-center text-lg-left my-auto">
           <ul class="list-inline mb-2">
+            
+            
             <li class="list-inline-item">
-              <a href="#">About</a>
+                <h3>Contact Us</h3>
+                <li>International Orator Hub</li>
+                <li>5 Excelsior Drive</li>
+                <li>Tralee</li>
+                <li>County Kerry</li>
+                <li>Ireland</li>
+                <li>Tel: +353 66 856941</li>
+                <li>Email: info@orator.ie</li>
+              
             </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
+            
           </ul>
           <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
         </div>
-        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+
+
+        <div class="col-lg-6 h-100 text-center text-lg-left">
+          
+            <h3>Reserve your Speaker</h3>
+            <p>Contact by telphone or email to reserve your Speaker, if we don't have your preferred speaker in our Library please contact us and we shall endeavour to 
+            secure an appointment.</p> 
+          
+        </div>
+
+        <div class="col-lg-3 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
               <a href="#">
@@ -93,8 +103,10 @@
       </div>
     </div>
   </footer>
-  
+
+
 <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+<script src="{{url_for('static', filename='js/valid.js')}}"  ></script>
 </body>
 </html>
