--- a/templates/deletecategory.html
+++ b/templates/deletecategory.html
@@ -8,23 +8,20 @@
 
 <div class="row">
        
-    <form onsubmit="return confirm('Are you sure?')" action="{{url_for('delcategory')}}" method="POST" class="col">
+    <form onsubmit="return confirm('Are you sure you want to DELETE?')" action="{{url_for('delcategory')}}" method="POST" class="col">
         <div class="form-group">
         {% for cat in categories %}
             <div class="form-check">  
-                <input type="checkbox" style="margin-right: 1em" name="category" value = "{{cat.category}}" id="category">
+                <input type="checkbox" style="margin-right: 1em" name="category" value = "{{cat.category}}">
                 <label class="form-check-label" for="category"><h5 class="font-weight-normal">{{cat.category}}</h5></label>    
             </div> 
         {% endfor %}
         </div>
 
     
-        <div class="row">
-          <div class="col-lg-2">
-            <button type="input" class="btn btn-danger btn-block btn-lg m-3">Delete Category</button>
-
-            <a  href="{{url_for('index')}}" class="btn btn-info btn-block btn-lg m-3">Home  </a>
-          </div>  
+        <div class="form-group mt-5">
+            <button type="input" class="btn btn-danger">Delete Category</button>
+            <a  href="{{url_for('index')}}" class="btn btn-info ml-3">Home  </a>  
         </div>
 
     </form>
