--- a/templates/newcategory.html
+++ b/templates/newcategory.html
@@ -12,7 +12,7 @@
         <div class="form-group">
         {% for cat in categories %}
             <div class="form-check">  
-                <input type="checkbox" style="margin-right: 1em" name="category" value = "{{cat.category}}" id="category" disabled>
+                <input type="checkbox" style="margin-right: 1em" name="category" value = "{{cat.category}}" disabled>
                 <label class="form-check-label" for="category"><h5 class="font-weight-normal">{{cat.category}}</h5></label>    
             </div> 
         {% endfor %}
@@ -23,8 +23,9 @@
             <input id="category" name="category" type="text" class="form-control form-control-lg">       
         </div>
 
-        <div class="row">
+        <div class="form-group mt-5">
             <button class="btn btn-primary" type="submit">Add Category  </button>
+            <a  href="{{url_for('index')}}" class="btn btn-info ml-3" type="submit">Home  </a>
         </div>
 
     </form>
