--- a/templates/newspeaker.html
+++ b/templates/newspeaker.html
@@ -7,23 +7,23 @@
 </div>
 
 <div class = "row">
-    <form action="{{url_for('add_speaker')}}" method="POST"  class="col s12">
+    <form  action="{{url_for('add_speaker')}}" method="POST" onsubmit="return checkForm()" class="col">
             
             <div class="form-group">
                 <label for="name">Speaker Name</label>
-                <input id="name" name="name" type="text" class="form-control form-control-lg">
+                <input id="name" name="name" type="text" class="form-control form-control-lg" required>
                 
             </div>
         
             <div class="form-group">
                 <label for="bio">Biography</label>
-                <textarea name="bio" id="bio" class="form-control form-control-lg" rows="10"></textarea>
+                <textarea name="bio" id="bio" class="form-control form-control-lg" rows="10" required></textarea>
                 
             </div>
 
             <div class="form-group">
                 <label for="banner">Short Description</label>
-                <textarea name="banner" id="banner" class="form-control form-control-lg"></textarea>
+                <textarea name="banner" id="banner" class="form-control form-control-lg" required></textarea>
                 
             </div>
 
@@ -36,24 +36,19 @@
                <h6 class="font-weight-normal">Select Speaker Categories</h6>
                 {% for cat in categories %}
                     <div class="form-check">  
-                        <input type="checkbox" style="margin-right: 1em" name="category" value = "{{cat.category}}" id="category">
+                        <input type="checkbox" style="margin-right: 1em" name="category" value = "{{cat.category}}" >
                         <label class="form-check-label" for="category"><h5 class="font-weight-normal">{{cat.category}}</h5></label>    
                     </div> 
                 {% endfor %}
             </div>
 
-        <div class="row">
-            <button class="btn btn-primary" type="submit" name="action">Add Speaker
-                
-             </button>
+        <div class="form-group">
+            <button class="btn btn-primary" type="submit" name="action">Add Speaker</button>
+             <a  href="{{url_for('index')}}" class="btn btn-info" type="submit">Home  </a>
         </div>
     </form>
 </div>
 
-<div class="row">
-      <div class="col-lg-4 my-5">
-        <a  href="{{url_for('index')}}" class="btn btn-info btn-lg btn-block" type="submit">Home  </a>
-      </div>  
-</div>
+
 
 {% endblock %}
